// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - File With translation renders correctly 1`] = `
<div
  class="ecl-file"
  data-ecl-file=""
>
  <div
    class="ecl-file__container"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--2xl ecl-file__icon"
      focusable="false"
    >
      <use
        xlink:href="/static/icons.svg#general--copy"
      />
    </svg>
    <div
      class="ecl-file__info"
    >
      <div
        class="ecl-file__title"
      >
        State of the Union 2018 brochure
      </div>
      <div
        class="ecl-file__language"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
    </div>
    <a
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download ecl-button ecl-button--secondary"
      download=""
      href="/example"
    >
      <span
        class="ecl-link__label"
      >
        Download
      </span>
       




            


  
        
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--fluid ecl-link__icon"
        download=""
        focusable="false"
      >
        <use
          xlink:href="/static/icons.svg#ui--download"
        />
      </svg>
    </a>
  </div>
  <div
    class="ecl-file__translation-container"
    data-ecl-file-translation-container=""
  >
    <button
      class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
      data-ecl-file-translation-toggle=""
      type="button"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
        >
          Other languages (3)
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon ecl-button__icon--after"
          data-ecl-file-translation-toggle=""
          focusable="false"
        >
          <use
            xlink:href="/static/icons.svg#ui--corner-arrow"
          />
        </svg>
      </span>
    </button>
    <ul
      class="ecl-file__translation-list"
    >
      <li
        class="ecl-file__translation-item"
      >
        <div
          class="ecl-file__translation-info"
        >
          <div
            class="ecl-file__translation-title"
          >
            български
          </div>
          <div
            class="ecl-file__translation-meta"
          >
            (15.7 MB - PDF)
          </div>
        </div>
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
          download=""
          href="/example"
          hreflang=""
        >
          <span
            class="ecl-link__label"
          >
            Download
          </span>
           




            


  
              
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            download=""
            focusable="false"
            hreflang=""
          >
            <use
              xlink:href="/static/icons.svg#ui--download"
            />
          </svg>
        </a>
      </li>
      <li
        class="ecl-file__translation-item"
      >
        <div
          class="ecl-file__translation-info"
        >
          <div
            class="ecl-file__translation-title"
          >
            español
          </div>
          <div
            class="ecl-file__translation-meta"
          >
            (15.8 MB - PDF)
          </div>
        </div>
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
          download=""
          href="/example"
          hreflang=""
        >
          <span
            class="ecl-link__label"
          >
            Download
          </span>
           




            


  
              
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            download=""
            focusable="false"
            hreflang=""
          >
            <use
              xlink:href="/static/icons.svg#ui--download"
            />
          </svg>
        </a>
      </li>
      <li
        class="ecl-file__translation-item"
      >
        <div
          class="ecl-file__translation-info"
        >
          <div
            class="ecl-file__translation-title"
          >
            čeština
          </div>
          <div
            class="ecl-file__translation-meta"
          >
            (15.4 MB - PDF)
          </div>
        </div>
        <a
          class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__translation-download"
          download=""
          href="/example"
          hreflang=""
        >
          <span
            class="ecl-link__label"
          >
            Download
          </span>
           




            


  
              
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-link__icon"
            download=""
            focusable="false"
            hreflang=""
          >
            <use
              xlink:href="/static/icons.svg#ui--download"
            />
          </svg>
        </a>
      </li>
      <li
        class="ecl-file__translation-item ecl-file__translation-description"
      >
        Looking for another language which is not on the list? Find out why.
      </li>
    </ul>
  </div>
</div>
`;

exports[`EC - File Without translation renders correctly 1`] = `
<div
  class="ecl-file"
  data-ecl-file=""
>
  <div
    class="ecl-file__container"
  >
    <svg
      aria-hidden="true"
      class="ecl-icon ecl-icon--2xl ecl-file__icon"
      focusable="false"
    >
      <use
        xlink:href="/static/icons.svg#general--copy"
      />
    </svg>
    <div
      class="ecl-file__info"
    >
      <div
        class="ecl-file__title"
      >
        State of the Union 2018 brochure
      </div>
      <div
        class="ecl-file__language"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
    </div>
    <a
      class="ecl-link ecl-link--standalone ecl-link--icon ecl-link--icon-after ecl-file__download ecl-button ecl-button--secondary"
      download=""
      href="/example"
    >
      <span
        class="ecl-link__label"
      >
        Download
      </span>
       




            


  
        
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--fluid ecl-link__icon"
        download=""
        focusable="false"
      >
        <use
          xlink:href="/static/icons.svg#ui--download"
        />
      </svg>
    </a>
  </div>
</div>
`;
